--- a/layout/_scripts/awesome-toc.ejs
+++ b/layout/_scripts/awesome-toc.ejs
@@ -4,7 +4,8 @@
     <script>
         $(document).ready(function(){
             $.awesome_toc({
-                overlay: true,
+                displayNow: true,
+                autoDetectHeadings: true,
                 contentId: "post-content",
             });
         });
