--- a/source/css/uno.css
+++ b/source/css/uno.css
@@ -5,7 +5,7 @@
    License: none (public domain)
 */
 @import url(../css/animate.css);
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h0, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -943,8 +943,10 @@ a {
     -o-transition: .5s;
     -ms-transition: .5s;
     -moz-transition: .5s;
+    -webkit-text-stroke-width:0.3px;
     -webkit-transition: .5s; }
 
+h0,
 h1,
 h2,
 h3,
@@ -954,31 +956,42 @@ h5 {
   margin-top: .8em;
   margin-bottom: .4em;
   /*font-family: "Roboto Slab", serif;*/
-  font-family: "Raleway",Verdana,sans-serif,宋体, serif, "Droid Serif", Helvetica Neue, Helvetica, Arial;
+  font-family: "Raleway",Verdana,sans-serif,"Yu Gothic","微软雅黑", serif, "Droid Serif", Helvetica Neue, Helvetica, Arial;
   font-weight: lighter;
   color: #333333;
+  -webkit-text-stroke-width:0.3px;
   -webkit-font-smoothing: antialiased; }
+
+h0 {
+	display: block;
+  margin-top: 0;
+  font-size: 2.0em;
+  line-height: 1.2em;
+  letter-spacing: .05em; 
+  font-weight: bold;
+  text-align: center; }
 
 h1 {
   margin-top: 0;
-  font-size: 3.2em;
+  font-size: 1.3em;
   line-height: 1.2em;
-  letter-spacing: .05em; }
+  letter-spacing: .05em;
+  font-weight: bold; }
 
 h2 {
-  font-size: 2.2em; }
+  font-size: 1.1em; }
 
 h3 {
-  font-size: 1.8em; }
+  font-size: 1.0em; }
 
 h4 {
-  font-size: 1.4em; }
+  font-size: 0.8em; }
 
 h4 {
-  font-size: 1.2em; }
+  font-size: 0.5em; }
 
 h5 {
-  font-size: 1em; }
+  font-size: 0.2em; }
 
 p {
   margin-bottom: 1.3em;
@@ -1035,7 +1048,7 @@ code {
 .author,
 .tags {
   font-size: .8em;
-  color: #c7c7c7; }
+  color: #7d7d7d; }
   .date a,
   .time a,
   .author a,
@@ -1086,14 +1099,48 @@ code {
   width: 940px;
   margin: 0 auto; }
 
-.content-wrapper {
+.content-wrapper-list {
   z-index: 800;
   width: 68%;
-  max-width: 960px;
+  min-height: 1719.730px;
+*  max-width: 960px;
   margin-left: 32%; }
+  
+.content-wrapper-list:before {
+	content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.2;
+  background: url(../images/list-cover.jpg) top center no-repeat #666666;
+  background-size: cover; }
+  
+.content-wrapper-post {
+  z-index: 800;
+  width: 68%;
+*  max-width: 960px;
+  margin-left: 32%; }
+  
+.content-wrapper-post:before {
+	content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.2;
+  background: url(../images/post-cover.png) no-repeat #666666;
+  background-position:80% 0;
+  background-attachment:fixed; }
 
 .content-wrapper__inner {
-  margin: 0 10%;
+  margin: 0 5% 0 5%;
   padding: 50px 0; }
 
 .footer {
@@ -1134,7 +1181,7 @@ hr {
   padding: 60px 0; }
 
 .post-meta {
-  margin: 0 0 1.4em 0;
+  margin: 1.4em 0 1.4em 0;
   color: #c7c7c7; }
 
 .post-meta__date {
@@ -1262,7 +1309,8 @@ hr {
     color: #FFF; }
 
 .cover-navigation {
-  margin-top: 10px; }
+	/* 修改边栏的位置(居中) */
+	margin:10px auto 0 auto;}
 
 .cover-navigation--social {
   margin-left: 30px; }
@@ -1308,6 +1356,7 @@ hr {
     color: #006699;
     border-color: #006699; }
 
+
 .btn-secondary {
   border-color: #5ba4e5;
   color: #5ba4e5; }
@@ -1351,8 +1400,9 @@ hr {
   color: #FFF; }
 
 nav {
-  display: inline-block;
-  position: relative; }
+  display: table;
+  position: relative; 
+  margin: 0 auto 0 auto;}
 
 .navigation {
   display: inline-block;
@@ -1362,7 +1412,7 @@ nav {
   list-style-type: none; }
 
 .navigation__item {
-  display: inline-block;
+  display: block;
   margin: 3px 3px;
   line-height: 1em; }
   .navigation__item a {
@@ -1377,7 +1427,7 @@ nav {
       opacity: 1; }
 
 .navigation--social {
-  margin-left: 0em; }
+*  margin-left: 0em; }
   .navigation--social a {
     padding: 6px 8px 6px 9px; }
     .navigation--social a .label {
@@ -1388,7 +1438,7 @@ nav {
 
 .pagination {
   display: block;
-  margin: 0 0 4em 0; }
+  margin: 2em 0 2em 0; }
 
 .pagination__page-number {
   margin: 0;
@@ -1419,14 +1469,14 @@ i {
   list-style-type: none;
   text-align: left; }
   .post-list li {
-    margin: 0 0 2.2em 0; }
+    margin: 0 0 0 0; }
     .post-list li:last-child hr {
       display: none; }
 
 .post-list__post-title {
   margin-top: 0;
   margin-bottom: .2em;
-  font-size: 1.8em;
+  font-size: 1.5em;
   -webkit-font-smoothing: antialiased;
   font-weight: bold;
   line-height: 1.3em; }
@@ -1450,7 +1500,7 @@ i {
 
 .post-list__divider {
   width: 30%;
-  margin: 2.2em 0 2.1em 0;
+  margin: 1.2em 0 1.1em 0;
   border-top: 1px solid #dddddd; }
 
 *:focus {
@@ -1547,9 +1597,18 @@ input[type="tel"] {
   input[type="tel"]:-ms-input-placeholder {
     color: #cccccc; }
 
-@media all and (min-width: 1300px) {
-  .content-wrapper {
-    margin-left: 430px; } }
+@media all and (min-width: 1440px) {
+  .content-wrapper-post {
+    margin-left: 430px;
+    margin-Right: 0px;
+    width: calc(100% - 430px); } }
+    
+@media all and (min-width: 1440px) {    
+  .content-wrapper-list {
+    margin-left: 430px;
+    margin-Right: 0px;
+    width: calc(100% - 430px); } }
+    
 @media all and (max-width: 1100px) {
   .panel-cover__logo {
     width: 70px; }
@@ -1565,8 +1624,8 @@ input[type="tel"] {
     font-size: .9em; }
 
   .navigation--social {
-    margin-top: 5px;
-    margin-left: 0; } }
+  	/* 修改社交图标对于父元素的位置 */
+    margin: 5px auto 0 auto; } }
 @media all and (max-width: 960px) {
   .btn-mobile-menu {
     display: block; }
@@ -1644,18 +1703,26 @@ input[type="tel"] {
         display: inline-block;
         width: 25.8%; }
 
-  .content-wrapper {
-    width: 80%;
+  .content-wrapper-list {
+  	/* 使元素充满页面 */
+    width: 100%;
+    max-width: none;
+    margin: 0 auto; }
+    
+  .content-wrapper-post {
+  	/* 使元素充满页面 */
+    width: 100%;
     max-width: none;
     margin: 0 auto; }
 
   .content-wrapper__inner {
-    margin-right: 0;
-    margin-left: 0; }
+  	/* 设置对于父元素的边界距离 */
+    margin-right: 20px;
+    margin-left: 20px; }
 
   .navigation__item {
     width: 100%;
-    margin: 0 0 .4em 0; } }
+    margin: auto; } }
 @media all and (max-width: 340px) {
   .panel-main__inner {
     padding: 0 5%; }
@@ -1700,4 +1767,8 @@ th, td {
 }
 pre {
   font-family: 
+}
+
+.sethidden {
+	visibility:hidden
 }
