--- a/source/css/uno.css
+++ b/source/css/uno.css
@@ -1064,6 +1064,13 @@ code {
   margin: 0;
   font-size: .9em;
   color: #999999; }
+  
+.excerpt img {
+   max-width: 20%;
+    margin: 0;
+    border-radius: 3px;
+    text-align: left;
+}
 
 .intro {
   font-family: "Roboto Slab", serif;
@@ -1116,7 +1123,7 @@ code {
   height: 100%;
   z-index: -1;
   opacity: 0.2;
-  background: url(../images/list-cover.jpg) top center no-repeat #666666;
+  background: url(../images/list-cover.jpg) top right no-repeat #666666;
   background-size: cover; }
   
 .content-wrapper-post {
@@ -1227,7 +1234,7 @@ hr {
   box-shadow: none; }
 
 .post img {
-  max-width: 100%;
+  max-width: 50%;
   margin: 0 auto;
   border-radius: 3px;
   text-align: center; }
